<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learn English 2017</string>

    <string-array name="lessons_array">
        <item>General</item>
        <item>Lesson 1</item>
        <item>Lesson 2</item>
        <item>Lesson 3</item>
        <item>Lesson 4</item>
        <item>Lesson 5</item>
        <item>Lesson 6</item>
        <item>Lesson 7</item>
        <item>Lesson 8</item>
        <item>Lesson 9</item>
        <item>Lesson 10</item>
    </string-array>

    <string name="summary">Summary</string>
    <string name="mine">Mine</string>
    <string name="featured">Featured</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="featured_courses">Featured courses</string>
    <string name="categories">Categories</string>
    <string name="course_name">Course Name</string>
    <string name="free">Free</string>
    <string name="enroll_now">Enroll Now</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="course_description">Course description</string>
    <string name="here_is_the_description_of_this_course">Here is the description of this course</string>
    <string name="action_home">Home</string>
    <string name="group_item">Group item</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="download_quality">Download Quality</string>
    <string name="downloaded_video_quality">Select default downloaded video quality</string>
    <string name="medium_quality">Medium Quality - 360p</string>
    <string name="hd_quality">HD Quality - 720p</string>
    <string name="full_hd_quality">Full HD Quality - 1080p</string>
    <string name="group_name">Group name</string>
    <string name="btn_remove_from_favorite">Remove from Favorite</string>
    <string name="question_number">1/10</string>
    <string name="fill_into_the_blank">Fill into the blank</string>
    <string name="question_content">Question content</string>
    <string name="next">Next</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="check_answer">Check Answer</string>
    <string name="result">Result</string>
    <string name="score">0/10</string>
    <string name="first_quiz_completed">First quiz completed !</string>
    <string name="correct_total">Correct/Total</string>
    <string name="rank">GOOD</string>
    <string name="course_suggestion">Courses suit you best:</string>
    <string name="about">About</string>
    <string name="lesson_quiz_completed">Lesson quiz completed !</string>
    <string name="btn_redo">Redo</string>
    <string name="btn_done">Done</string>
    <string name="course_title">Course Title</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="learn_english_2017">LEARN ENGLISH 2017</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="developed_by">Developed by:</string>
    <string name="developer_1">Pham Thanh Tu</string>
    <string name="developer_2">Nguyen Ngoc Thien An</string>
    <string name="about_description_1">Learn English 2017 is #1 English Learning app for learners of all ages. You can use our apps to practise and improve your grammar, vocabulary and listening.</string>
    <string name="about_description_2">We will update the courses and lessons regularly. Thank you for using and enjoying our app.</string>
    <string name="about_description_3">Send feedback to support@learnenglish2017.tk</string>
    <string name="about_description_4">Visit app website at learnenglish2017.tk</string>

</resources>