<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tdt.tu.learnenglish2017.activity.LessonQuizActivity"
    tools:ignore="ContentDescription">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorOrange"
            android:gravity="center"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnHome"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ic_home_white_24dp"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txtQuestionNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/question_number"
                    android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="@color/colorWhite"
                    custom:ignore="RelativeOverlap" />

                <com.github.lzyzsd.circleprogress.DonutProgress
                    android:id="@+id/timeCircle"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:rotation="270"
                    app:donut_finished_color="@color/colorWhite"
                    app:donut_finished_stroke_width="3dp"
                    app:donut_max="30"
                    app:donut_text=""
                    app:donut_unfinished_color="@color/colorOrange"
                    app:donut_unfinished_stroke_width="3dp"
                    custom:donut_progress="0" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/txtFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/fill_into_the_blank"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFill"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/question_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textStyle="bold" />


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtQuestion">

        <ImageView
            android:id="@+id/ivTrueA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="27dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_check_green_24dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivFalseA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="27dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_close_red_24dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivTrueB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="27dp"
            android:src="@drawable/ic_check_green_24dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivFalseB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="27dp"
            android:src="@drawable/ic_close_red_24dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivTrueC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="27dp"
            android:src="@drawable/ic_check_green_24dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivFalseC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="27dp"
            android:src="@drawable/ic_close_red_24dp"
            android:visibility="invisible" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp">

            <RadioButton
                android:id="@+id/rbOptionA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_a"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/rbOptionB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/option_b"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/rbOptionC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/option_c"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </RadioGroup>
    </FrameLayout>

    <Button
        android:id="@+id/btnCheckAnswer"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_orange_rounded"
        android:text="@string/check_answer"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_orange_rounded"
        android:text="@string/next"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>
